--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@
  */
 body {
     line-height: 1.7em;
-    color: #7f8c8d;
+    color: #808080;
     font-size: 13px;
+    background-color: #343a40;
 }
 
 h1,
@@ -78,8 +79,8 @@ label {
 }
 
 a.pure-button-primary {
-    background: white;
-    color: #1f8dd6;
+    background: #ced4da;
+    color: #020202;
     border-radius: 5px;
     font-size: 120%;
 }
@@ -96,7 +97,7 @@ a.pure-button-primary {
     box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
 }
 .home-menu {
-    background: #2d3e50;
+    background: #343a40;
 }
 .pure-menu.pure-menu-fixed {
     /* Fixed menus normally have a border at the bottom. */
@@ -106,7 +107,7 @@ a.pure-button-primary {
 }
 
 .home-menu .pure-menu-heading {
-    color: white;
+    color: #1985a1;
     font-weight: 400;
     font-size: 120%;
 }
@@ -116,13 +117,19 @@ a.pure-button-primary {
 }
 
 .home-menu a {
-    color: #6FBEF3;
+    color: #aaa;
 }
 .home-menu li a:hover,
 .home-menu li a:focus {
     background: none;
     border: none;
     color: #AECFE5;
+}
+.pure-menu-link {
+    color: #aaa;
+}
+.pure-menu-selected>.pure-menu-link, .pure-menu-selected>.pure-menu-link:visited {
+    color: #aaa;
 }
 
 
@@ -132,13 +139,13 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background: #1f8dd6;
-    z-index: 1;
+    /*background: #1f8dd6;*/
+/*    z-index: 1;*/
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
     width: 100%;
-    height: 88%;
-    top: 0;
+    height: 87%;
+    top: 3.9em;
     left: 0;
     position: fixed !important;
 }
@@ -151,25 +158,30 @@ a.pure-button-primary {
     position: absolute;
     top: 100px; left: 0; bottom: 0; right: 0;
     text-align: center;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
+
 }
 
 /* This is the main heading that appears on the blue section */
 .splash-head {
     font-size: 20px;
     font-weight: bold;
-    color: white;
-    border: 3px solid white;
+    color: #ced4da;
+    border: 3px solid #ced4da;
     padding: 1em 1.6em;
     font-weight: 100;
     border-radius: 5px;
     line-height: 1em;
+    text-transform: uppercase;
+    /*background-color: */
+
 }
 
 /* This is the subheading that appears on the blue section */
 .splash-subhead {
-    color: white;
+    color: #ced4da;
     letter-spacing: 0.05em;
+    font-weight:normal;
     opacity: 0.8;
 }
 
@@ -198,17 +210,17 @@ a.pure-button-primary {
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 0.1em;
-    margin: 2em 0 1em;
+    margin: 1em 0 1em;
 }
 
 /* This is a modifier class used when the content-head is inside a ribbon */
 .content-head-ribbon {
-    color: white;
+    color: #1985a1;
 }
 
 /* This is the class used for the content sub-headers (<h3>) */
 .content-subhead {
-    color: #1f8dd6;
+    color: #1985a1;
 }
     .content-subhead i {
         margin-right: 7px;
@@ -216,10 +228,14 @@ a.pure-button-primary {
 
 /* This is the class used for the dark-background areas. */
 .ribbon {
-    background: #2d3e50;
+    background: #343a40;
     color: #aaa;
 }
 
+.brightribbon {
+    background: #ced4da;
+    color: #020202;
+}
 /* This is the class used for the footer */
 .footer {
     background: #111;
