--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -195,7 +195,8 @@ a.pure-button-primary {
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
-    top: 92%;
+    top: 95%;
+    left: 0%;
     width: 100%;
     min-height: 12%;
     z-index: 2;
