page content is narrower, fixed blog layout css, inconsistency in styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-<footer class="site-footer h-card ribbon l-box-lrg pure-g">
+<footer class="content-normal site-footer h-card ribbon l-box-lrg pure-g">
     <div class="l-box pure-u-1 pure-u-md-1-2">
         {%- if site.email -%}
-        <h3 class="content-subhead">Email: </h3><p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
+        <h3 class="content-subhead">Contact me: </h3><p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
         {%- endif -%}
     </div>
 
