--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -214,6 +214,10 @@ a.pure-button-primary {
 
 }
 
+.content-normal{
+    padding: 1em 10% 3em;
+}
+
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
