--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,34 @@ layout: default
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
+    <div class="content-normal brightribbon">
+		<h2 class="content-head content-head-ribbon is-center">{{ page.title | escape }}</h2>
+		<h4 class="content-subhead is-center">
+            <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+                {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+                {{ page.date | date: date_format }}
+            </time>
+            {%- if page.author -%}
+                • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+            {%- endif -%}
+		</h4>
+
+		<div class="pure-g">
+			<div class="l-box pure-u-1 ">
+                <div class="post-content e-content" itemprop="articleBody">
+                    {{ content }}
+                </div>
+                {%- if site.disqus.shortname -%}
+                    {%- include disqus_comments.html -%}
+                {%- endif -%}
+
+                <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+			</div>
+		</div>
+	</div>
+
+
+  <!-- <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
@@ -23,5 +50,5 @@ layout: default
     {%- include disqus_comments.html -%}
   {%- endif -%}
 
-  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a> -->
 </article>
